replace collectors.tolist